# Teachings-BCI_2026_Projects

./: .gitignore  LICENSE
Team E/: best_emg_air_drum_model.pth  clean_data.py  model.py  per_class_accuracy.ipynb  play.py  pyproject.toml  record.py  record_bioamp.py  record_npg.py  train.py
Team E/data/: drum_classes.npy  drum_training_data.csv  y_drum.npy  y_intensity.npy
Team E/logs/: logging.txt
Team E/sounds/: floor-tom.aiff  hihat-open.aiff  snare2.aiff
Team E/wandb/run-20260410_205212-ojgtc6wl/: run-ojgtc6wl.wandb
Team E/wandb/run-20260410_205212-ojgtc6wl/files/: config.yaml  wandb-metadata.json  wandb-summary.json
Team E/wandb/run-20260410_205614-fq7uswc1/: run-fq7uswc1.wandb
Team E/wandb/run-20260410_205614-fq7uswc1/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
Team E/wandb/run-20260410_210405-9w283fp7/: run-9w283fp7.wandb
Team E/wandb/run-20260410_210405-9w283fp7/files/: config.yaml  wandb-metadata.json  wandb-summary.json
Team E/wandb/run-20260410_231305-w0fir3ba/: run-w0fir3ba.wandb
Team E/wandb/run-20260410_231305-w0fir3ba/files/: config.yaml  wandb-metadata.json  wandb-summary.json
Team E/wandb/run-20260410_231417-5w4tdkjn/: run-5w4tdkjn.wandb
Team E/wandb/run-20260410_231417-5w4tdkjn/files/: config.yaml  wandb-metadata.json  wandb-summary.json
Team E/wandb/run-20260410_231648-rdptabyr/: run-rdptabyr.wandb
Team E/wandb/run-20260410_231648-rdptabyr/files/: config.yaml  (+2 more)
Team E/wandb/run-20260410_231827-87ut27af/: run-87ut27af.wandb
Team E/wandb/run-20260410_235917-8cw68cl1/: run-8cw68cl1.wandb
(+256 files in other folders)
